2017-10-23  Marek Polacek  <polacek@redhat.com>

	PR c/82681
	* gcc.dg/c90-const-expr-11.c: Fix typos in dg-warning.
	* gcc.dg/overflow-warn-5.c: Likewise.
	* gcc.dg/overflow-warn-8.c: Likewise.

2017-10-23  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/82673
	* gcc.target/i386/pr82673.c: New test.

2017-10-23  Jakub Jelinek  <jakub@redhat.com>

	* lib/scanasm.exp (dg-function-on-line): Accept optional column info.
	* gcc.dg/debug/dwarf2/pr53948.c: Likewise.
	* g++.dg/debug/dwarf2/pr77363.C: Likewise.
	* gcc.dg/debug/dwarf2/asm-line1.c: Add -gno-column-info to dg-options.
	* gcc.dg/debug/dwarf2/discriminator.c: Likewise.
	* g++.dg/debug/dwarf2/typedef6.C: Likewise.

2017-10-23  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/82672
	* gfortran.dg/graphite/pr82672.f90: New testcase.

2017-10-23  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/77555
	* g++.dg/torture/pr77555.C: New.

2017-10-23  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/82129
	* gcc.dg/torture/pr82129.c: New testcase.

2017-10-22  Uros Bizjak  <ubizjak@gmail.com>

	PR target/52451
	* gcc.dg/torture/pr52451.c: New test.

2017-10-22  Uros Bizjak  <ubizjak@gmail.com>
	    Jakub Jelinek  <jakub@redhat.com>

	PR target/82628
	* gcc.dg/torture/pr82628.c: New test.

2017-10-22  Igor Tsimbalist  <igor.v.tsimbalist@intel.com>

	* c-c++-common/attr-nocf-check-1a.c: Remove test.
	* c-c++-common/attr-nocf-check-3a.c: Likewise.
	* gcc.target/i386/attr-nocf-check-1a.c: Add test.
	* gcc.target/i386/attr-nocf-check-3a.c: Likewise.

2017-10-21  Igor Tsimbalist  <igor.v.tsimbalist@intel.com>

	* c-c++-common/attr-nocf-check-1.c: Shorten a cheking message.
	* c-c++-common/attr-nocf-check-3.c: Likewise.
	* c-c++-common/fcf-protection-1.c: Add x86 specific message.
	* c-c++-common/fcf-protection-2.c: Likewise.
	* c-c++-common/fcf-protection-3.c: Likewise.
	* c-c++-common/fcf-protection-5.c: Likewise.
	* c-c++-common/attr-nocf-check-1a.c: New test.